[package]
name = "stream_throttle"
version = "0.2.1"
description = "Provides a Stream combinator, to limit the rate at which items are produced."
readme = "README.md"
license = "MIT"
authors = ["Mike Caines"]
repository = "https://github.com/mikecaines/stream-throttle"
categories = ["asynchronous"]
keywords = ["async", "futures", "stream", "throttle"]
documentation = "https://docs.rs/stream_throttle/"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
futures = "0.1"
tokio-timer = "0.2"

[dev-dependencies]
tokio = "0.1"
