[package]
name = "stream_throttle"
version = "0.3.1"
description = "Provides a Stream combinator, to limit the rate at which items are produced."
readme = "README.md"
license = "MIT"
authors = ["Mike Caines"]
repository = "https://github.com/mikecaines/stream-throttle"
categories = ["asynchronous"]
keywords = ["async", "futures", "stream", "throttle"]
documentation = "https://docs.rs/stream_throttle/"

edition = "2018"

[dependencies]
log = "0.4.8"
futures = "0.3.1"
pin-utils = "0.1.0-alpha.4"
tokio = {version = "0.2.11", optional = true, features = ["time"]}
futures-timer = {version = "3.0.1", optional = true}

[features]
default = ["timer-tokio"]
timer-tokio = ["tokio"]
timer-futures-timer = ["futures-timer"]

[dev-dependencies]
tokio = {version = "0.2.11", features = ["full"]}
async-std = {version = "1", features = ["attributes"]}

[[example]]
name = "multi_stream_tokio"
required-features = ["timer-tokio"]

[[example]]
name = "multi_stream_async_std"
required-features = ["timer-futures-timer"]